[package]
name = "tiny-cid"
version = "0.2.0"
description = "CID in rust"
homepage = "https://github.com/multiformats/rust-cid"
authors = ["Friedel Ziegelmayer <dignifiedquire@gmail.com>"]
keywords = ["ipld", "ipfs", "cid", "multihash", "multiformats"]
license = "MIT"
readme = "README.md"
edition = "2018"

[features]
default = ["std"]
std = ["tiny-multihash/std", "unsigned-varint/std"]
test = ["quickcheck", "rand"]
scale-codec = ["parity-scale-codec", "tiny-multihash/scale-codec"]

[package.metadata.release]
pre-release-commit-message = "Release {{version}} 🎉🎉"
no-dev-version = true

[dependencies]
multibase = "0.8.0"
tiny-multihash = { version = "0.4.2", default-features = false }
unsigned-varint = { version = "0.5.0", default-features = false }

parity-scale-codec = { version = "1.3.4", optional = true, default-features = false, features = ["derive"] }
quickcheck = { version = "0.9.2", optional = true }
rand = { version = "0.7.3", optional = true }

[dev-dependencies]
tiny-multihash = { version = "0.4.2", features = ["test"] }
quickcheck = "0.9.2"
rand = "0.7.3"
